OC-111: feat(timetable): rebuild Skeleton Builder cohort-wide, retire legacy Generate
Skeleton Builder now places a cohort's whole term at once (every non-elective
subject in one merged grid, color-coded) instead of one subject at a time, with
a hard Theory-exclusivity conflict check across subjects and an advisory for
overlapping Lab/Clinical slots from different subjects. Retires the legacy
Draft Review Generate button and TimetableGenerationService.generate() entirely
so Skeleton Builder is the only placement path — the two pipelines could
previously stomp on each other's DRAFT rows. Adds a read-only suggest-candidates
endpoint. No schema changes.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>